package DataAccess;

import Model.Client;

/**
 * Data Access Object for Client entities. Extends AbstractDAO, specifying the Client type.
 */
public class ClientDAO extends AbstractDAO<Client>{
}
