package DataAccess;

import Model.Orders;
/**
 * Data Access Object for Client entities. Extends AbstractDAO, specifying the Client type.
 */
public class OrderDAO  extends AbstractDAO<Orders>{
}
