package DataAccess;

import Model.Product;

/**
 * Data Access Object for Product entities. Extends AbstractDAO, specifying the Product type.
 */
public class ProductDAO extends AbstractDAO<Product>{
}
